--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
     "grunt-newer": "^0.7.0",
     "grunt-premailer": "^0.2.10",
     "grunt-prettify": "^0.3.5"
+  },
+  "bugs": {
+    "url": "https://github.com/ronniechong/edm-automation/issues"
+  },
+  "homepage": "https://github.com/ronniechong/edm-automation",
+  "dependencies": {
+    "grunt-cli": "^0.1.13"
   }
 }
