--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "EDMAutomation",
-  "version": "0.1.0",
+  "name": "EDM-Automation",
+  "version": "1.0.0",
   "description": "Automated email template",
   "author": "Ronnie Chong",
   "repository": {
     "type": "git",
     "url": "https://github.com/ronniechong/edm-automation"
+  },
+  "scripts": {
+    "start": "grunt"
   },
   "keywords": [
     "npm",
@@ -18,19 +21,17 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-compass": "^1.0.1",
-    "grunt-contrib-jade": "^0.13.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-premailer": "^0.2.10",
-    "grunt-prettify": "^0.3.5"
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-newer": "^1.3.0",
+    "grunt-premailer": "^1.0.0",
+    "grunt-prettify": "^0.4.0",
+    "grunt-sass": "^2.0.0"
   },
   "bugs": {
     "url": "https://github.com/ronniechong/edm-automation/issues"
   },
-  "homepage": "https://github.com/ronniechong/edm-automation",
-  "dependencies": {
-    "grunt-cli": "^0.1.13"
-  }
+  "homepage": "https://github.com/ronniechong/edm-automation"
 }
